--- a/tes.html
+++ b/tes.html
@@ -19,6 +19,8 @@
     font-size: 40px;
     font-weight: bold;
     text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   h2 {
@@ -58,47 +60,74 @@
   tr:nth-child(even) { background-color: #f9f9f9; }
   tr:hover { background-color: #e3f2fd; }
 
-  /* === TABEL TOTAL GABUNG (POSISI DI BAWAH) === */
-  .total-container {
-    width: 70%;
-    margin: 30px auto 40px;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-    overflow: hidden;
+  .footer {
+    text-align: right;
+    font-size: 12px;
+    padding: 8px;
+    background: #f1f1f1;
+    color: #666;
+    border-top: 1px solid #ddd;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
-  .total-container table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-  .total-container th, .total-container td {
-    border: 1px solid #ccc;
-    padding: 15px;
-    text-align: center;
-    font-size: 24px;
-  }
-
-  .total-container th {
-    background: #083D36;
-    color: white;
-  }
-
-  .total-container td {
-    font-weight: bold;
-    color: #083D36;
-  }
-
-  /* === JAM DAN LOGO === */
+  /* === BAGIAN TOTAL + JAM === */
   .top-bar {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 30px 3% 10px;
+    margin: 20px 3%;
     flex-wrap: wrap;
   }
 
+  .total-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .total-box {
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    overflow: hidden;
+    width: 180px;
+  }
+
+  .total-box table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
+  .total-box th {
+    background: #083D36;
+    color: white;
+    font-size: 18px;
+    padding: 10px;
+  }
+
+  .total-box td {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    color: #333;
+  }
+
+  /* === TABEL SHIFT === */
+  .shift-table {
+    width: 50%;
+    margin: 10px 0;
+    font-size: 20px;
+  }
+
+  .shift-table th, .shift-table td {
+    font-size: 22px;
+    padding: 6px 10px;
+  }
+
+  /* === JAM DAN LOGO === */
   .total-wrapper1 {
     display: flex;
     flex-direction: column;
@@ -106,6 +135,10 @@
     justify-content: center;
     margin-right: 3%;
     text-align: center;
+  }
+
+  .datetime {
+    margin-bottom: 10px;
   }
 
   #tanggal {
@@ -136,8 +169,21 @@
     background: white;
     object-fit: contain;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
   }
 
+  @keyframes fadeZoomIn {
+    0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
+    100% { opacity: 1; transform: scale(1) rotate(0deg); }
+  }
+
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
+  }
+
+  /* === FOOTER ZINUS === */
   .footer-zinus {
     display: flex;
     justify-content: center;
@@ -147,20 +193,27 @@
     color: white;
     padding: 20px 10px;
     border-top: 4px solid #004d00;
-    margin-top: 20px;
+    margin-top: 10px;
   }
+
+  .footer-zinus p {
+    margin: 5px 0 15px;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+  }
+
 </style>
 </head>
 <body>
 
-<!-- === TEKS BERJALAN === -->
+<!-- TEKS BERJALAN -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
-<!-- === TABEL TOPPER === -->
+<!-- TABEL TOPPER -->
 <div class="container">
   <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
   <table id="tableTopper">
@@ -170,13 +223,12 @@
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
-    <tbody id="bodyTopper">
-      <tr><td colspan="13">Loading data...</td></tr>
-    </tbody>
+    <tbody id="bodyTopper"><tr><td class="loading" colspan="13">Loading data...</td></tr></tbody>
   </table>
+  <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === TABEL FOAM === -->
+<!-- TABEL FOAM -->
 <div class="container">
   <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
   <table id="tableFoam">
@@ -186,43 +238,50 @@
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
-    <tbody id="bodyFoam">
-      <tr><td colspan="13">Loading data...</td></tr>
-    </tbody>
+    <tbody id="bodyFoam"><tr><td class="loading" colspan="13">Loading data...</td></tr></tbody>
   </table>
+  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === TABEL TOTAL DI BAWAH === -->
-<div class="total-container">
-  <table>
-    <thead>
-      <tr>
-        <th colspan="2">SHIFT 1</th>
-        <th colspan="2">SHIFT 2</th>
-      </tr>
-      <tr>
-        <th>Topper</th>
-        <th>Foam</th>
-        <th>Topper</th>
-        <th>Foam</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td id="totalTopper1">0</td>
-        <td id="totalFoam1">0</td>
-        <td id="totalTopper2">0</td>
-        <td id="totalFoam2">0</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<!-- === JAM & LOGO === -->
+<!-- TOTAL & JAM -->
 <div class="top-bar">
+  <div class="total-wrapper">
+    <div class="total-box">
+      <table>
+        <thead><tr><th>SHIFT</th></tr></thead>
+        <tbody>
+          <tr>
+            <td>
+              <select id="shiftSelector" style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
+                <option value="1" selected>1</option>
+                <option value="2">2</option>
+              </select>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="total-box">
+      <table id="tableTotalTopper">
+        <thead><tr><th>TOTAL TOPPER</th></tr></thead>
+        <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
+      </table>
+    </div>
+
+    <div class="total-box">
+      <table id="tableTotalFoam">
+        <thead><tr><th>TOTAL FOAM</th></tr></thead>
+        <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
+      </table>
+    </div>
+  </div>
+
   <div class="total-wrapper1">
-    <div id="tanggal"></div>
-    <div id="jam"></div>
+    <div class="datetime">
+      <div id="tanggal"></div>
+      <div id="jam"></div>
+    </div>
     <div class="logo-row">
       <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
       <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
@@ -230,6 +289,27 @@
   </div>
 </div>
 
+<!-- TABEL SHIFT 1 & 2 (di bawah, kecil, rata kiri) -->
+<div class="container">
+  <table class="shift-table">
+    <thead>
+      <tr>
+        <th colspan="2">SHIFT 1</th>
+        <th colspan="2">SHIFT 2</th>
+      </tr>
+      <tr>
+        <th>Topper</th><th>Foam</th>
+        <th>Topper</th><th>Foam</th>
+      </tr>
+    </thead>
+    <tbody id="shiftBody">
+      <tr><td colspan="4">Loading shift data...</td></tr>
+    </tbody>
+  </table>
+  <div class="footer">Auto-refresh setiap 30 detik</div>
+</div>
+
+<!-- FOOTER -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
 </footer>
@@ -238,42 +318,80 @@
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
 async function loadSheetData() {
+  const status = document.getElementById("status");
   try {
-    const response = await fetch(SHEET_URL + "&t=" + Date.now());
+    status.textContent = "🔄 Memuat data...";
+    const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
+    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
 
+    const topperBody = document.getElementById("bodyTopper");
+    const foamBody = document.getElementById("bodyFoam");
+    const totalTopperBody = document.getElementById("bodyTotalTopper");
+    const totalFoamBody = document.getElementById("bodyTotalFoam");
+    const shiftBody = document.getElementById("shiftBody");
+
+    topperBody.innerHTML = foamBody.innerHTML = totalTopperBody.innerHTML = totalFoamBody.innerHTML = shiftBody.innerHTML = "";
+
     const topperRows = rows.slice(5, 8);
     const foamRows = rows.slice(11, 16);
+
+    topperRows.forEach(row => {
+      const tr = document.createElement("tr");
+      row.slice(0, 13).forEach((cell, index) => {
+        const td = document.createElement("td");
+        td.textContent = cell;
+        td.style.fontWeight = "bold";
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if(index>0 && !isNaN(cleanValue) && cleanValue<90 && cleanValue>0){td.style.backgroundColor="#ffcccc";td.style.color="#a80000";}
+        tr.appendChild(td);
+      });
+      topperBody.appendChild(tr);
+    });
+
+    foamRows.forEach(row => {
+      const tr = document.createElement("tr");
+      row.slice(0, 13).forEach((cell, index) => {
+        const td = document.createElement("td");
+        td.textContent = cell;
+        td.style.fontWeight = "bold";
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if(index>0 && !isNaN(cleanValue) && cleanValue<75 && cleanValue>0){td.style.backgroundColor="#ffcccc";td.style.color="#a80000";}
+        tr.appendChild(td);
+      });
+      foamBody.appendChild(tr);
+    });
+
     const totalRow = rows[18];
-
-    document.getElementById("bodyTopper").innerHTML = topperRows.map(r => 
-      `<tr>${r.slice(0, 13).map(c => `<td>${c}</td>`).join("")}</tr>`).join("");
-
-    document.getElementById("bodyFoam").innerHTML = foamRows.map(r => 
-      `<tr>${r.slice(0, 13).map(c => `<td>${c}</td>`).join("")}</tr>`).join("");
-
-    if (totalRow) {
-      document.getElementById("totalTopper1").textContent = totalRow[0] || "0";
-      document.getElementById("totalFoam1").textContent   = totalRow[1] || "0";
-      document.getElementById("totalTopper2").textContent = totalRow[2] || "0";
-      document.getElementById("totalFoam2").textContent   = totalRow[3] || "0";
+    if(totalRow){
+      totalTopperBody.innerHTML=`<tr><td>${totalRow[0]||0}</td></tr>`;
+      totalFoamBody.innerHTML=`<tr><td>${totalRow[1]||0}</td></tr>`;
+      shiftBody.innerHTML=`<tr><td>${totalRow[2]||0}</td><td>${totalRow[3]||0}</td><td>${totalRow[4]||0}</td><td>${totalRow[5]||0}</td></tr>`;
     }
-  } catch (err) {
+
+    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
+
+  } catch(err){
     console.error(err);
+    status.textContent = "⚠️ Gagal memuat data";
   }
 }
 
-function updateClock() {
+function updateClock(){
   const now = new Date();
-  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday:'long', year:'numeric', month:'long', day:'numeric' });
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year:'numeric', month:'long', day:'numeric'});
   document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12:false });
 }
 
-setInterval(updateClock, 1000);
+setInterval(updateClock,1000);
 updateClock();
 loadSheetData();
-setInterval(loadSheetData, 30000);
+setInterval(loadSheetData,30000);
+
+document.getElementById("shiftSelector").addEventListener("change",function(){
+  window.location.href = this.value === "2" ? "shift2.html" : "index.html";
+});
 </script>
 </body>
 </html>
