--- a/tes.html
+++ b/tes.html
@@ -120,6 +120,8 @@
     width: 50%;
     margin: 10px 0;
     font-size: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   }
 
   .shift-table th, .shift-table td {
