--- a/tes.html
+++ b/tes.html
@@ -127,6 +127,7 @@
   .shift-table th, .shift-table td {
     font-size: 22px;
     padding: 6px 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   }
 
   /* === JAM DAN LOGO === */
