--- a/tes.html
+++ b/tes.html
@@ -5,218 +5,86 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
-  body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background-color: #f4f6f8;
-    margin: 0;
-    padding: 0;
+  body { font-family: 'Segoe UI', Arial, sans-serif; background:#f4f6f8; margin:0; padding:0; 
+       }
+  .marquee { 
+    background:#083D36; color:white; padding:10px 0; font-size:40px; font-weight:bold; text-align:center; overflow:hidden; white-space:nowrap; 
   }
-
-  .marquee {
-    background: #083D36;
-    color: white;
-    padding: 10px 0;
-    font-size: 40px;
-    font-weight: bold;
-    text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
+  h2 { 
+    text-align:center; color:#333; margin:10px 0; font-size:22px; 
   }
-
-  h2 {
-    text-align: center;
-    color: #333;
-    margin: 10px 0 10px;
-    font-size: 22px;
+  .container { 
+    width:95%; margin:15px auto; background:white; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.1); overflow-x:auto; padding:0; 
   }
-
-  .container {
-    width: 95%;
-    margin: 15px auto;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    overflow-x: auto;
-    padding: 0;
+  table { 
+    width:100%; border-collapse:collapse; table-layout: fixed; 
   }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
+  th, td { 
+    padding:10px 6px; text-align:center; font-size:25px; 
   }
-
-  th, td {
-    padding: 10px 6px;
-    text-align: center;
-    font-size: 25px;
+  th { 
+    background:#083D36; color:white; 
   }
-
-  th {
-    background: #083D36;
-    color: white;
+  tr:nth-child(even) { 
+    background:#f9f9f9; 
   }
-
-  tr:nth-child(even) { background-color: #f9f9f9; }
-  tr:hover { background-color: #e3f2fd; }
-
-  .footer {
-    text-align: right;
-    font-size: 12px;
-    padding: 8px;
-    background: #f1f1f1;
-    color: #666;
-    border-top: 1px solid #ddd;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+  tr:hover { 
+    background:#e3f2fd; 
   }
-
-  /* === BAGIAN TOTAL + JAM === */
-  .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 20px 3%;
-    flex-wrap: wrap;
+  .footer { 
+    text-align:right; font-size:12px; padding:8px; background:#f1f1f1; color:#666; border-top:1px solid #ddd; border-bottom-left-radius:10px; border-bottom-right-radius:10px; 
   }
-
-  .total-wrapper {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    align-items: center;
+  .total-box { 
+    background:white; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); overflow:hidden; width:180px; margin-right:20px; display:inline-block; 
   }
-
-  .total-box {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    overflow: hidden;
-    width: 180px;
-  }
-
   .total-box table {
-    width: 100%;
-    border-collapse: collapse;
+    width:100%; border-collapse:collapse; 
   }
-
-  .total-box th {
-    background: #083D36;
-    color: white;
-    font-size: 18px;
-    padding: 10px;
+  .total-box th { 
+    background:#083D36; color:white; font-size:18px; padding:10px; 
   }
-
   .total-box td {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    padding: 10px;
-    color: #333;
+    font-size:30px; font-weight:bold; text-align:center; padding:10px; color:#333; 
   }
-
-  /* === TABEL SHIFT === */
-  .shift-table {
-    width: 50%;
-    margin: 10px 0;
-    font-size: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  .shift-table { 
+    width:50%; margin:10px 0; font-size:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); 
   }
-
-  .shift-table th, .shift-table td {
-    font-size: 22px;
-    padding: 6px 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  .shift-table th, .shift-table td { 
+    font-size:22px; padding:6px 10px; 
   }
-
-  /* === JAM DAN LOGO === */
-  .total-wrapper1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-right: 3%;
-    text-align: center;
+  .total-wrapper1 { 
+    display:flex; flex-direction:column; align-items:center; justify-content:center; margin:10px 0; text-align:center; 
   }
-
-  .datetime {
-    margin-bottom: 10px;
+  #tanggal { 
+    font-size:20px; font-weight:600; color:#333; 
   }
-
-  #tanggal {
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
+  #jam { 
+    font-size:40px; font-weight:bold; color:#006400; margin-top:5px; text-align:center; 
   }
-
-  #jam {
-    font-size: 40px;
-    font-weight: bold;
-    color: #006400;
-    margin-top: 5px;
-    text-align: center;
+  .logo-row { 
+    display:flex; justify-content:center; align-items:center; gap:15px; 
   }
-
-  .logo-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
+  .zinus-logo, .zinus-logo1 { 
+    width:60px; height:60px; border-radius:10px; background:white; object-fit:contain; box-shadow:0 2px 6px rgba(0,0,0,0.2); 
   }
-
-  .zinus-logo, .zinus-logo1 {
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    background: white;
-    object-fit: contain;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
+  .footer-zinus { 
+    display:flex; justify-content:center; align-items:center; flex-direction:column; background:#083D36; color:white; padding:20px 10px; border-top:4px solid #004d00; margin-top:10px; 
   }
-
-  @keyframes fadeZoomIn {
-    0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
-    100% { opacity: 1; transform: scale(1) rotate(0deg); }
-  }
-
-  @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.05); }
-    100% { transform: scale(1); }
-  }
-
-  /* === FOOTER ZINUS === */
-  .footer-zinus {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: #083D36;
-    color: white;
-    padding: 20px 10px;
-    border-top: 4px solid #004d00;
-    margin-top: 10px;
-  }
-
   .footer-zinus p {
-    margin: 5px 0 15px;
-    font-size: 16px;
-    letter-spacing: 0.5px;
+    margin:5px 0 15px; font-size:16px; letter-spacing:0.5px;
   }
-
 </style>
 </head>
 <body>
 
-<!-- TEKS BERJALAN -->
+<!-- Marquee -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
-<!-- TABEL TOPPER -->
+<!-- Topper Table -->
 <div class="container">
   <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
   <table id="tableTopper">
@@ -226,12 +94,14 @@
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
-    <tbody id="bodyTopper"><tr><td class="loading" colspan="13">Loading data...</td></tr></tbody>
+    <tbody id="bodyTopper">
+      <tr><td colspan="13">Loading data...</td></tr>
+    </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- TABEL FOAM -->
+<!-- Foam Table -->
 <div class="container">
   <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
   <table id="tableFoam">
@@ -241,10 +111,14 @@
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
-    <tbody id="bodyFoam"><tr><td class="loading" colspan="13">Loading data...</td></tr></tbody>
+    <tbody id="bodyFoam">
+      <tr><td colspan="13">Loading data...</td></tr>
+    </tbody>
   </table>
   <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
-  <!-- TABEL SHIFT 1 & 2 (di bawah, kecil, rata kiri) -->
+</div>
+
+<!-- Shift Table -->
 <div class="container">
   <table class="shift-table">
     <thead>
@@ -256,18 +130,6 @@
         <th>Topper</th><th>Foam</th>
         <th>Topper</th><th>Foam</th>
       </tr>
-
-       <div class="total-wrapper1">
-    <div class="datetime">
-      <div id="tanggal"></div>
-      <div id="jam"></div>
-    </div>
-    <div class="logo-row">
-      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
-      <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
-    </div>
-  </div>
-      
     </thead>
     <tbody id="shiftBody">
       <tr><td colspan="4">Loading shift data...</td></tr>
@@ -275,8 +137,20 @@
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
+
+<!-- Jam & Logo -->
+<div class="total-wrapper1">
+  <div class="datetime">
+    <div id="tanggal"></div>
+    <div id="jam"></div>
+  </div>
+  <div class="logo-row">
+    <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
+    <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
+  </div>
 </div>
-<!-- FOOTER -->
+
+<!-- Footer -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
 </footer>
@@ -295,46 +169,47 @@ async function loadSheetData() {
 
     const topperBody = document.getElementById("bodyTopper");
     const foamBody = document.getElementById("bodyFoam");
-    const totalTopperBody = document.getElementById("bodyTotalTopper");
-    const totalFoamBody = document.getElementById("bodyTotalFoam");
     const shiftBody = document.getElementById("shiftBody");
 
-    topperBody.innerHTML = foamBody.innerHTML = totalTopperBody.innerHTML = totalFoamBody.innerHTML = shiftBody.innerHTML = "";
+    topperBody.innerHTML = foamBody.innerHTML = shiftBody.innerHTML = "";
 
-    const topperRows = rows.slice(5, 8);
-    const foamRows = rows.slice(11, 16);
-
-    topperRows.forEach(row => {
-      const tr = document.createElement("tr");
-      row.slice(0, 13).forEach((cell, index) => {
-        const td = document.createElement("td");
-        td.textContent = cell;
-        td.style.fontWeight = "bold";
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if(index>0 && !isNaN(cleanValue) && cleanValue<90 && cleanValue>0){td.style.backgroundColor="#ffcccc";td.style.color="#a80000";}
+    // Topper rows
+    rows.slice(5,8).forEach(row=>{
+      const tr=document.createElement("tr");
+      row.slice(0,13).forEach((cell,i)=>{
+        const td=document.createElement("td");
+        td.textContent=cell;
+        td.style.fontWeight="bold";
+        const val=parseFloat(cell.replace(/[^0-9.]/g,""));
+        if(i>0 && !isNaN(val) && val<90 && val>0){td.style.backgroundColor="#ffcccc"; td.style.color="#a80000";}
         tr.appendChild(td);
       });
       topperBody.appendChild(tr);
     });
 
-    foamRows.forEach(row => {
-      const tr = document.createElement("tr");
-      row.slice(0, 13).forEach((cell, index) => {
-        const td = document.createElement("td");
-        td.textContent = cell;
-        td.style.fontWeight = "bold";
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if(index>0 && !isNaN(cleanValue) && cleanValue<75 && cleanValue>0){td.style.backgroundColor="#ffcccc";td.style.color="#a80000";}
+    // Foam rows
+    rows.slice(11,16).forEach(row=>{
+      const tr=document.createElement("tr");
+      row.slice(0,13).forEach((cell,i)=>{
+        const td=document.createElement("td");
+        td.textContent=cell;
+        td.style.fontWeight="bold";
+        const val=parseFloat(cell.replace(/[^0-9.]/g,""));
+        if(i>0 && !isNaN(val) && val<75 && val>0){td.style.backgroundColor="#ffcccc"; td.style.color="#a80000";}
         tr.appendChild(td);
       });
       foamBody.appendChild(tr);
     });
 
+    // Shift totals
     const totalRow = rows[18];
     if(totalRow){
-      totalTopperBody.innerHTML=`<tr><td>${totalRow[0]||0}</td></tr>`;
-      totalFoamBody.innerHTML=`<tr><td>${totalRow[1]||0}</td></tr>`;
-      shiftBody.innerHTML=`<tr><td>${totalRow[2]||0}</td><td>${totalRow[3]||0}</td><td>${totalRow[4]||0}</td><td>${totalRow[5]||0}</td></tr>`;
+      shiftBody.innerHTML = `<tr>
+        <td>${totalRow[2]||0}</td>
+        <td>${totalRow[3]||0}</td>
+        <td>${totalRow[4]||0}</td>
+        <td>${totalRow[5]||0}</td>
+      </tr>`;
     }
 
     status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
@@ -346,19 +221,15 @@ async function loadSheetData() {
 }
 
 function updateClock(){
-  const now = new Date();
-  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year:'numeric', month:'long', day:'numeric'});
-  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12:false });
+  const now=new Date();
+  document.getElementById("tanggal").textContent=now.toLocaleDateString("id-ID", { weekday:'long', year:'numeric', month:'long', day:'numeric' });
+  document.getElementById("jam").textContent=now.toLocaleTimeString("id-ID",{hour12:false});
 }
 
 setInterval(updateClock,1000);
 updateClock();
 loadSheetData();
 setInterval(loadSheetData,30000);
-
-document.getElementById("shiftSelector").addEventListener("change",function(){
-  window.location.href = this.value === "2" ? "shift2.html" : "index.html";
-});
 </script>
 </body>
 </html>
