--- a/tes.html
+++ b/tes.html
@@ -5,74 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
-  body { font-family: 'Segoe UI', Arial, sans-serif; background:#f4f6f8; margin:0; padding:0; 
-       }
-  .marquee { 
-    background:#083D36; color:white; padding:10px 0; font-size:40px; font-weight:bold; text-align:center; overflow:hidden; white-space:nowrap; 
-  }
-  h2 { 
-    text-align:center; color:#333; margin:10px 0; font-size:22px; 
-  }
-  .container { 
-    width:95%; margin:15px auto; background:white; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.1); overflow-x:auto; padding:0; 
-  }
-  table { 
-    width:100%; border-collapse:collapse; table-layout: fixed; 
-  }
-  th, td { 
-    padding:10px 6px; text-align:center; font-size:25px; 
-  }
-  th { 
-    background:#083D36; color:white; 
-  }
-  tr:nth-child(even) { 
-    background:#f9f9f9; 
-  }
-  tr:hover { 
-    background:#e3f2fd; 
-  }
-  .footer { 
-    text-align:right; font-size:12px; padding:8px; background:#f1f1f1; color:#666; border-top:1px solid #ddd; border-bottom-left-radius:10px; border-bottom-right-radius:10px; 
-  }
-  .total-box { 
-    background:white; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); overflow:hidden; width:180px; margin-right:20px; display:inline-block; 
-  }
-  .total-box table {
-    width:100%; border-collapse:collapse; 
-  }
-  .total-box th { 
-    background:#083D36; color:white; font-size:18px; padding:10px; 
-  }
-  .total-box td {
-    font-size:30px; font-weight:bold; text-align:center; padding:10px; color:#333; 
-  }
-  .shift-table { 
-    width:50%; margin:10px 0; font-size:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); 
-  }
-  .shift-table th, .shift-table td { 
-    font-size:22px; padding:6px 10px; 
-  }
-  .total-wrapper1 { 
-    display:flex; flex-direction:column; align-items:center; justify-content:center; margin:10px 0; text-align:center; 
-  }
-  #tanggal { 
-    font-size:20px; font-weight:600; color:#333; 
-  }
-  #jam { 
-    font-size:40px; font-weight:bold; color:#006400; margin-top:5px; text-align:center; 
-  }
-  .logo-row { 
-    display:flex; justify-content:center; align-items:center; gap:15px; 
-  }
-  .zinus-logo, .zinus-logo1 { 
-    width:60px; height:60px; border-radius:10px; background:white; object-fit:contain; box-shadow:0 2px 6px rgba(0,0,0,0.2); 
-  }
-  .footer-zinus { 
-    display:flex; justify-content:center; align-items:center; flex-direction:column; background:#083D36; color:white; padding:20px 10px; border-top:4px solid #004d00; margin-top:10px; 
-  }
-  .footer-zinus p {
-    margin:5px 0 15px; font-size:16px; letter-spacing:0.5px;
-  }
+  body { font-family: 'Segoe UI', Arial, sans-serif; background:#f4f6f8; margin:0; padding:0; }
+  .marquee { background:#083D36; color:white; padding:10px 0; font-size:40px; font-weight:bold; text-align:center; overflow:hidden; white-space:nowrap; }
+  h2 { text-align:center; color:#333; margin:10px 0; font-size:22px; }
+  .container { width:95%; margin:15px auto; background:white; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.1); overflow-x:auto; padding:0; }
+  table { border-collapse:collapse; table-layout: fixed; }
+  th, td { text-align:center; font-size:25px; padding:10px 6px; }
+  th { background:#083D36; color:white; }
+  tr:nth-child(even) { background:#f9f9f9; }
+  tr:hover { background:#e3f2fd; }
+  .footer { text-align:right; font-size:12px; padding:8px; background:#f1f1f1; color:#666; border-top:1px solid #ddd; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
+  .shift-wrapper { display:flex; justify-content:space-between; align-items:flex-start; margin-top:10px; }
+  .shift-table { width:65%; font-size:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+  .shift-table th, .shift-table td { font-size:22px; padding:6px 10px; }
+  .datetime-logo { display:flex; flex-direction:column; align-items:center; justify-content:flex-start; width:30%; }
+  #tanggal { font-size:20px; font-weight:600; color:#333; }
+  #jam { font-size:40px; font-weight:bold; color:#006400; margin-top:5px; text-align:center; }
+  .logo-row { display:flex; justify-content:center; align-items:center; gap:10px; margin-top:5px; }
+  .zinus-logo, .zinus-logo1 { width:60px; height:60px; border-radius:10px; background:white; object-fit:contain; box-shadow:0 2px 6px rgba(0,0,0,0.2); }
+  .footer-zinus { display:flex; justify-content:center; align-items:center; flex-direction:column; background:#083D36; color:white; padding:20px 10px; border-top:4px solid #004d00; margin-top:10px; }
+  .footer-zinus p { margin:5px 0 15px; font-size:16px; letter-spacing:0.5px; }
 </style>
 </head>
 <body>
@@ -118,8 +70,9 @@
   <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- Shift Table -->
-<div class="container">
+<!-- Shift Table + Jam/Logo -->
+<div class="container shift-wrapper">
+  <!-- Tabel Shift -->
   <table class="shift-table">
     <thead>
       <tr>
@@ -135,18 +88,15 @@
       <tr><td colspan="4">Loading shift data...</td></tr>
     </tbody>
   </table>
-  <div class="footer">Auto-refresh setiap 30 detik</div>
-</div>
 
-<!-- Jam & Logo -->
-<div class="total-wrapper1">
-  <div class="datetime">
+  <!-- Jam + Logo di sebelah kanan -->
+  <div class="datetime-logo">
     <div id="tanggal"></div>
     <div id="jam"></div>
-  </div>
-  <div class="logo-row">
-    <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
-    <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
+    <div class="logo-row">
+      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
+      <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
+    </div>
   </div>
 </div>
 
@@ -231,5 +181,6 @@ updateClock();
 loadSheetData();
 setInterval(loadSheetData,30000);
 </script>
+
 </body>
 </html>
