--- a/tes.html
+++ b/tes.html
@@ -5,38 +5,143 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
-  body { font-family: 'Segoe UI', Arial, sans-serif; background:#f4f6f8; margin:0; padding:0; }
-  .marquee { background:#083D36; color:white; padding:10px 0; font-size:40px; font-weight:bold; text-align:center; overflow:hidden; white-space:nowrap; }
-  h2 { text-align:center; color:#333; margin:10px 0; font-size:22px; }
-  .container { width:95%; margin:15px auto; background:white; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.1); overflow-x:auto; padding:0; }
-  table { border-collapse:collapse; table-layout: fixed; }
-  th, td { text-align:center; font-size:25px; padding:10px 6px; }
-  th { background:#083D36; color:white; }
-  tr:nth-child(even) { background:#f9f9f9; }
-  tr:hover { background:#e3f2fd; }
-  .footer { text-align:right; font-size:12px; padding:8px; background:#f1f1f1; color:#666; border-top:1px solid #ddd; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
-  .shift-wrapper { display:flex; justify-content:space-between; align-items:flex-start; margin-top:10px; }
-  .shift-table { width:65%; font-size:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
-  .shift-table th, .shift-table td { font-size:22px; padding:6px 10px; }
-  .datetime-logo { display:flex; flex-direction:column; align-items:center; justify-content:flex-start; width:30%; }
-  #tanggal { font-size:20px; font-weight:600; color:#333; }
-  #jam { font-size:40px; font-weight:bold; color:#006400; margin-top:5px; text-align:center; }
-  .logo-row { display:flex; justify-content:center; align-items:center; gap:10px; margin-top:5px; }
-  .zinus-logo, .zinus-logo1 { width:60px; height:60px; border-radius:10px; background:white; object-fit:contain; box-shadow:0 2px 6px rgba(0,0,0,0.2); }
-  .footer-zinus { display:flex; justify-content:center; align-items:center; flex-direction:column; background:#083D36; color:white; padding:20px 10px; border-top:4px solid #004d00; margin-top:10px; }
-  .footer-zinus p { margin:5px 0 15px; font-size:16px; letter-spacing:0.5px; }
+  body {
+    font-family: 'Segoe UI', Arial, sans-serif;
+    background-color: #f4f6f8;
+    margin: 0;
+    padding: 0;
+  }
+
+  .marquee {
+    background: #083D36;
+    color: white;
+    padding: 10px 0;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  h2 {
+    text-align: center;
+    color: #333;
+    margin: 10px 0;
+    font-size: 22px;
+  }
+
+  .container {
+    width: 95%;
+    margin: 15px auto;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    overflow-x: auto;
+    padding: 0;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+  }
+
+  th, td {
+    padding: 10px 6px;
+    text-align: center;
+    font-size: 25px;
+  }
+
+  th {
+    background: #083D36;
+    color: white;
+  }
+
+  tr:nth-child(even) { background-color: #f9f9f9; }
+  tr:hover { background-color: #e3f2fd; }
+
+  .footer {
+    text-align: right;
+    font-size: 12px;
+    padding: 8px;
+    background: #f1f1f1;
+    color: #666;
+    border-top: 1px solid #ddd;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  /* === SHIFT TABLE + JAM/LOGO === */
+  .shift-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 95%;
+    margin: 15px auto;
+  }
+
+  .shift-table {
+    width: 400px;
+    font-size: 20px;
+    border-collapse: collapse;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+
+  .shift-table th, .shift-table td {
+    font-size: 20px;
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+  }
+
+  .datetime-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #tanggal { font-size: 20px; font-weight: 600; color: #333; margin-bottom:5px; }
+  #jam { font-size: 40px; font-weight: bold; color: #006400; margin-bottom:5px; }
+
+  .logo-row {
+    display: flex;
+    gap: 15px;
+  }
+
+  .zinus-logo, .zinus-logo1 {
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    object-fit: contain;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  }
+
+  .footer-zinus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #083D36;
+    color: white;
+    padding: 20px 10px;
+    border-top: 4px solid #004d00;
+    margin-top: 10px;
+  }
+
+  .footer-zinus p { margin: 5px 0 15px; font-size: 16px; letter-spacing: 0.5px; }
+
 </style>
 </head>
 <body>
 
-<!-- Marquee -->
+<!-- TEKS BERJALAN -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
-<!-- Topper Table -->
+<!-- TABEL TOPPER -->
 <div class="container">
   <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
   <table id="tableTopper">
@@ -47,13 +152,13 @@
       </tr>
     </thead>
     <tbody id="bodyTopper">
-      <tr><td colspan="13">Loading data...</td></tr>
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- Foam Table -->
+<!-- TABEL FOAM -->
 <div class="container">
   <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
   <table id="tableFoam">
@@ -64,15 +169,14 @@
       </tr>
     </thead>
     <tbody id="bodyFoam">
-      <tr><td colspan="13">Loading data...</td></tr>
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
-  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
+  <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- Shift Table + Jam/Logo -->
-<div class="container shift-wrapper">
-  <!-- Tabel Shift -->
+<!-- SHIFT 1 & 2 + JAM/LOGO -->
+<div class="shift-wrapper">
   <table class="shift-table">
     <thead>
       <tr>
@@ -89,7 +193,6 @@
     </tbody>
   </table>
 
-  <!-- Jam + Logo di sebelah kanan -->
   <div class="datetime-logo">
     <div id="tanggal"></div>
     <div id="jam"></div>
@@ -100,7 +203,7 @@
   </div>
 </div>
 
-<!-- Footer -->
+<!-- FOOTER -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
 </footer>
@@ -109,28 +212,26 @@
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
 async function loadSheetData() {
-  const status = document.getElementById("status");
+  const topperBody = document.getElementById("bodyTopper");
+  const foamBody = document.getElementById("bodyFoam");
+  const shiftBody = document.getElementById("shiftBody");
+  const statusElems = document.querySelectorAll(".footer");
+
+  topperBody.innerHTML = foamBody.innerHTML = shiftBody.innerHTML = "";
+
   try {
-    status.textContent = "🔄 Memuat data...";
-    const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
-    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
-    const text = await response.text();
-    const rows = text.trim().split("\n").map(r => r.split(","));
-
-    const topperBody = document.getElementById("bodyTopper");
-    const foamBody = document.getElementById("bodyFoam");
-    const shiftBody = document.getElementById("shiftBody");
-
-    topperBody.innerHTML = foamBody.innerHTML = shiftBody.innerHTML = "";
+    const res = await fetch(SHEET_URL + "&t=" + Date.now(), {cache: "no-store"});
+    const text = await res.text();
+    const rows = text.trim().split("\n").map(r=>r.split(","));
 
     // Topper rows
     rows.slice(5,8).forEach(row=>{
-      const tr=document.createElement("tr");
+      const tr = document.createElement("tr");
       row.slice(0,13).forEach((cell,i)=>{
-        const td=document.createElement("td");
-        td.textContent=cell;
-        td.style.fontWeight="bold";
-        const val=parseFloat(cell.replace(/[^0-9.]/g,""));
+        const td = document.createElement("td");
+        td.textContent = cell;
+        td.style.fontWeight = "bold";
+        const val = parseFloat(cell.replace(/[^0-9.]/g,""));
         if(i>0 && !isNaN(val) && val<90 && val>0){td.style.backgroundColor="#ffcccc"; td.style.color="#a80000";}
         tr.appendChild(td);
       });
@@ -139,48 +240,48 @@ async function loadSheetData() {
 
     // Foam rows
     rows.slice(11,16).forEach(row=>{
-      const tr=document.createElement("tr");
+      const tr = document.createElement("tr");
       row.slice(0,13).forEach((cell,i)=>{
-        const td=document.createElement("td");
-        td.textContent=cell;
-        td.style.fontWeight="bold";
-        const val=parseFloat(cell.replace(/[^0-9.]/g,""));
+        const td = document.createElement("td");
+        td.textContent = cell;
+        td.style.fontWeight = "bold";
+        const val = parseFloat(cell.replace(/[^0-9.]/g,""));
         if(i>0 && !isNaN(val) && val<75 && val>0){td.style.backgroundColor="#ffcccc"; td.style.color="#a80000";}
         tr.appendChild(td);
       });
       foamBody.appendChild(tr);
     });
 
-    // Shift totals
+    // Shift totals (misal row 18)
     const totalRow = rows[18];
     if(totalRow){
       shiftBody.innerHTML = `<tr>
-        <td>${totalRow[2]||0}</td>
-        <td>${totalRow[3]||0}</td>
-        <td>${totalRow[4]||0}</td>
-        <td>${totalRow[5]||0}</td>
+        <td>${totalRow[2]||0}</td><td>${totalRow[3]||0}</td>
+        <td>${totalRow[4]||0}</td><td>${totalRow[5]||0}</td>
       </tr>`;
     }
 
-    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
+    // Update status footer
+    const now = new Date();
+    statusElems.forEach(e=>{ e.textContent = "✅ Diperbarui: "+now.toLocaleTimeString("id-ID"); });
 
   } catch(err){
     console.error(err);
-    status.textContent = "⚠️ Gagal memuat data";
+    const now = new Date();
+    statusElems.forEach(e=>{ e.textContent = "⚠️ Gagal memuat data"; });
   }
 }
 
 function updateClock(){
-  const now=new Date();
-  document.getElementById("tanggal").textContent=now.toLocaleDateString("id-ID", { weekday:'long', year:'numeric', month:'long', day:'numeric' });
-  document.getElementById("jam").textContent=now.toLocaleTimeString("id-ID",{hour12:false});
+  const now = new Date();
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID",{weekday:'long',year:'numeric',month:'long',day:'numeric'});
+  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID",{hour12:false});
 }
 
-setInterval(updateClock,1000);
 updateClock();
+setInterval(updateClock,1000);
 loadSheetData();
 setInterval(loadSheetData,30000);
 </script>
-
 </body>
 </html>
